<resources>
    <string name="app_name">DevIntensive</string>
    <string name="hint_phone">Мобильный телефон</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_github">Репозиторий</string>
    <string name="hint_vk">Профиль в vk</string>
    <string name="hint_about_me">О себе</string>
    <string name="text_phone">+7(926)135-68-62</string>
    <string name="text_email">object172@yandex.ru</string>
    <string name="text_github">https://github.com/object172/DevIntensive</string>
    <string name="text_vk">vk.com/2432428</string>
    <string name="text_about_me">Введите информацию о себе. Напишите свои интересы, хобби, принципы жизни</string>
    <string name="profile_menu">Профиль</string>
    <string name="contact_menu">Контакты</string>

    <string name="exit_menu">Выход</string>
    <string name="user_profile_splash">Изменить фотографию профиля</string>
    <string name="ser_profile_dialog_gallery">загрузить из галлереи</string>
    <string name="user_profile_choce_message">выберите фото</string>
    <string name="error_format_phone">Неверный формат. Формат: +x xxx xxx-xx-xx</string>
    <string name="error_format_email">Неверный формат. Формат: xxx@xx.xx</string>
    <string name="error_format_path_vk">Неверный формат. Формат: vk.com/xxx</string>
    <string name="error_format_path_github">Неверный формат. Формат: github.com/xxx</string>
    <string name="login">ВОЙТИ</string>
    <string name="forget_password">Забыли пароль?</string>


    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose.message">выберите фото</string>
</resources>


