<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/userphoto"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingTop="@dimen/spacing_medial_24">

                    <LinearLayout
                        style="@style/container">

                        <TextView
                            style="@style/text.title"
                            android:text="5"/>

                        <TextView
                            style="@style/text"
                            android:text="Рейтинг"/>
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/line_size"
                        android:layout_height="@dimen/height_line"
                        android:background="@color/gray_light"/>

                    <LinearLayout
                        style="@style/container">

                        <TextView
                            style="@style/text.title"
                            android:text="2500"/>

                        <TextView
                            style="@style/text"
                            android:text="Строчек кода"/>
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/line_size"
                        android:layout_height="@dimen/height_line"
                        android:background="@color/gray_light"/>

                    <LinearLayout
                        style="@style/container">

                        <TextView
                            style="@style/text.title"
                            android:text="5"/>

                        <TextView
                            style="@style/text"
                            android:text="Проектов"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/left_medium_margin_32"
                        android:layout_marginRight="@dimen/right_small_margin_16"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_phone"
                                style="@style/edit"
                                android:hint="@string/hint_phone"
                                android:inputType="phone"
                                android:text="@string/text_phone"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_perm_phone_msg_black_24px"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/left_large_margin_72"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_email_black_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/left_medium_margin_32"
                        android:layout_marginRight="@dimen/right_small_margin_16"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_mail"
                                style="@style/edit"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:text="@string/text_email"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_send_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/left_large_margin_72"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_vk"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_large_72"
                        android:layout_marginLeft="@dimen/left_medium_margin_32"
                        android:layout_marginRight="@dimen/right_small_margin_16"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_vk"
                                style="@style/edit"
                                android:hint="@string/hint_vk"
                                android:inputType="textMultiLine"
                                android:text="@string/text_vk"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/left_large_margin_72"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_github_circle"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/left_medium_margin_32"
                        android:layout_marginRight="@dimen/right_small_margin_16"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_github"
                                style="@style/edit"
                                android:hint="@string/hint_github"
                                android:inputType="textMultiLine"
                                android:text="@string/text_github"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_black_24dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/left_large_margin_72"
                    android:background="@color/gray_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_account_circle_black_24px"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/left_medium_margin_32"
                        android:layout_marginRight="@dimen/right_small_margin_16"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_bio"
                                style="@style/edit"
                                android:hint="@string/hint_about_me"
                                android:inputType="textMultiLine"
                                android:text="@string/text_about_me"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_right_space"
            android:src="@drawable/ic_mode_edit_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"/>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>